[gd_scene load_steps=3 format=3 uid="uid://dqtfvuspfhidd"]

[ext_resource type="Script" uid="uid://cvbrg7wpbbt3n" path="res://Scenes/Game/game_over_canvas.gd" id="1_pda5h"]
[ext_resource type="PackedScene" uid="uid://cambpmv5v3opa" path="res://Scenes/EnhancedButton/enhanced_button.tscn" id="2_4p3hf"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_pda5h")

[node name="GameOverLabel" type="Label" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -217.5
offset_right = 217.5
grow_horizontal = 2
grow_vertical = 2
text = "A Cheesy Delight!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" parent="." instance=ExtResource("2_4p3hf")]
offset_left = 128.0
offset_top = 448.0
offset_right = 528.0
offset_bottom = 548.0
text = "Play Again"

[node name="MainMenuButton" parent="." instance=ExtResource("2_4p3hf")]
offset_left = 624.0
offset_top = 448.0
offset_right = 1024.0
offset_bottom = 548.0
text = "Main Menu"

[node name="GameEndWaitTimer" type="Timer" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
